# rust_stock_request

./: Cargo.toml  README.md
src/: .main.rs.swp  main.rs
